traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:1: error: Missing closing brace `}' assumed here
override def run() {
^Snake:1: error: expected start of definition
override def run() {
         ^Snake:12: error: expected class or object definition
def posFinale() {
^Snake:47: error: expected class or object definition
def serpenter() {
^